--- a/sass/components/_abilites.scss
+++ b/sass/components/_abilites.scss
@@ -48,7 +48,7 @@
 @media (max-width: 700px) {
   .abilities-wrapper {
     h3 {
-      font-size: 2rem;
+      font-size: 1.2rem;
     }
 
     &-counter {
