--- a/sass/components/_introduction.scss
+++ b/sass/components/_introduction.scss
@@ -38,9 +38,8 @@
 
 @media (max-width: 1000px) {
   .intro {
-    padding: 5rem 0;
+    padding-top: 0;
   }
-
   .intro-wrapper {
     height: auto;
 
