--- a/sass/components/_latest_projects.scss
+++ b/sass/components/_latest_projects.scss
@@ -1,5 +1,5 @@
 .projects {
-  padding-bottom: 11rem;
+  padding-bottom: 10rem;
 
   &-heading {
     text-align: center;
